# ProgrammingTechnologiesHW

./: README.md
.github/workflows/: main.yml
task1/: run.sh
task2/: CMakeLists.txt
task2/A/: preparing.py
task2/B/: CMakeLists.txt  lib.h
task2/C/: main.cpp  main.h  main_test.cpp  tests.cpp
task3/: CMakeLists.txt
task5/tests/01-simple-library/: AddTestCase.cpp  AddTestCase.h  LeapTestCase.cpp  LeapTestCase.h
task5/tests/02-tree/: TreeTestCase.cpp  TreeTestCase.h
task5/tests/03-weather/: WeatherMock.h  WeatherTestCase.cpp  WeatherTestCase.h
